frontfinance/deployment-frontfinance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-finance
  labels:
    app: front-finance
    type: front
spec:
  selector:
    matchLabels:
      app: front-finance
      type: front
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: front-finance    
        type: front
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode2
      imagePullSecrets:
       - name: regcred
      containers:
        - name: front-finance
          image: 192.168.2.19:5000/frontfinance:1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW      
          resources:
            requests:
              memory: "2048Mi"
              cpu: "300m"
            limits:
              memory: "3Gi"
              cpu: "3"         
              #---------------------------------#
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
