frontfinance/virtualServiceFrontFinance.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontfinancevs
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - name: frontfinance-vs
    match:
    - uri:
        prefix: "/#/front-finance"     
    route:
    - destination:
        host: service-front-finance 
        port:
          number: 80
